fixes item from ignoring gap
categorie item ignored gap of parent. created link to my github section. fixed some multiple problems with the dashboard grid. added styling. images fit in grid items, under the title.

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ body {
   flex-direction: column;
   align-items: center;
   max-width: 35em;
+  height: 100%;
   gap: 2em;
   background-color: #232323;
   padding: 2em;
@@ -62,31 +63,73 @@ color: white;
 .categories {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2em;
+  column-gap: 1em;
+  row-gap: 2em;
 }
 
 .categories .item {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.categories .image {
+  display: flex;
   justify-content: center;
-  height: 80%;
-  background-color: #3f3f3f;
-  padding: .5em;
+  align-items: center;
+  height: 100%;
+  background-color: #333333;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .categories img {
-  max-width: 100%;
-  max-height: auto;
+  position: relative;
+  width: 100%;
+  padding: 1em;
+  transition: .8s;
 }
 
-.github {
+.categories .image img:hover {
+  transition: .2s;
+  transform: scale(1.05);
+}
+
+.github section {
   background-color: #3f3f3f;
   display: flex;
-  justify-content: space-between;
   padding: 1em;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.github img {
+  height: 4em;
+  width: auto;
+  margin-right: 1em;
+}
+
+.github a {
+  margin-left: auto;
+  padding: .4em .8em .4em .8em;
+  border-radius: 80px;
+  border: none;
+  background-color: #2F8C2D;
+  color: white;
+  font-size: 1.8em;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.github a:hover {
+  opacity: .9;
+  transform: scale(1.01);
 }
 
 .aboutMe p {
-  background-color: #3f3f3f;
+  display: flex;
+  padding: 1em;
+  margin: 0;
+  background-color: #333333;
+  border-radius: 10px;
 }
